<ScrollView
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.nyu.blife_app.RegistrationActivity"
        android:background="#de99ac">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_registration"
            android:id="@+id/txtRegistration"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="#34495e"
            android:padding="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:textSize="20sp"
            android:layout_alignParentEnd="false"
            android:layout_alignParentTop="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_below="@+id/txtRegistration">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="#FF233240"
                app:met_errorColor="#34495e"
                app:met_baseColor="#34495e"
                app:met_primaryColor="#FFD41022"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editFirstName"
                android:padding="16dp"
                android:gravity="left"
                android:hint="@string/register_firstname_hint"
                android:inputType="textPersonName" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="#FF233240"
                app:met_errorColor="#34495e"
                app:met_baseColor="#34495e"
                app:met_primaryColor="#FFD41022"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editLastName"
                android:gravity="left"
                android:hint="@string/register_lastname_hint"
                android:padding="16dp"
                />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="#FF233240"
                app:met_errorColor="#34495e"
                app:met_baseColor="#34495e"
                app:met_primaryColor="#FFD41022"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editUserName"
                android:gravity="bottom|left"
                android:hint="@string/register_username_hint"
                android:padding="16dp"
                android:inputType="text" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="#34495e"
                app:met_errorColor="#34495e"
                app:met_baseColor="#34495e"
                app:met_primaryColor="#FFD41022"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editPassword"
                android:padding="16dp"
                android:gravity="bottom|left"
                android:hint="@string/register_password_hint"
                android:inputType="textPassword" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="#34495e"
                app:met_errorColor="#34495e"
                app:met_baseColor="#34495e"
                app:met_primaryColor="#FFD41022"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/editPhoneNumber"
                android:padding="16dp"
                android:gravity="left"
                android:hint="@string/register_phone_hint"
                android:inputType="number" />


            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerCity"
                android:gravity="left"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:entries="@array/Cities"
                android:prompt="@string/select_city" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:textColorHint="#34495e"
                app:met_errorColor="#34495e"
                app:met_baseColor="#34495e"
                app:met_primaryColor="#FFD41022"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editZipcode"
                android:gravity="left"
                android:hint="@string/register_zipcode_hint"
                android:layout_marginTop="10dp"
                android:padding="16dp"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_donor_checkbox"
                android:id="@+id/check_Donor"
                android:layout_marginTop="10dp"
                />




            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_Button"
                android:id="@+id/registerButton"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center|center_horizontal"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:textColor="#ffffffff"
                style="@style/ButtonText"
                android:background="@drawable/button_style"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
