<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_vertical"
    android:background="#de99ac"

    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".WelcomeActivity">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_caption"
        android:id="@+id/txtCaption"
        android:layout_gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:gravity="fill_horizontal"
        android:padding="5dp"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_subCaption"
        android:id="@+id/txtSubCaption"
        android:layout_gravity="center|end"
        style="@style/Base.TextAppearance.AppCompat.Subhead"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="top"
        android:layout_below="@+id/txtCaption"
        android:layout_alignRight="@+id/txtCaption"
        android:layout_alignEnd="@+id/txtCaption" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@mipmap/welcomepic"
        android:layout_below="@+id/txtSubCaption"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/linearLayout2" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_appName"
        android:id="@+id/txtAppName"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingLeft="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingRight="16dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:id="@+id/linearLayout2">

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/signUp"
            android:padding="20dp"
            android:textSize="20sp"
            android:gravity="center|center_horizontal"
            android:textColor="#ffffffff"
            style="@style/ButtonText"
            android:background="@drawable/button_style"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signIn"

            android:padding="20dp"
            android:textSize="20sp"
            android:gravity="center|center_horizontal"
            android:textColor="#ffffffff"
            style="@style/ButtonText"
            android:background="@drawable/button_style"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />
    </LinearLayout>




</RelativeLayout>